# research-lab

./: .env  .gitattributes  .gitignore  Cheat-Sheets.docx  D0009002.DB  README.md  _build.gradle_  build.gradle  buildNumber.properties  build_with_sonar.sh  copy2ssh.sh  course_notes.txt  docker-compose.yml  gradle.properties  lombok.config  pom.xml  settings.gradle  sonar-project.properties  sonar_env.sh  workspace.code-workspace
python/edu-django/: .coveragerc  .gitignore  Pipfile  README.md  _env_python_setup.sh  _env_virtual_setup.sh  setup.cfg
python/edu-django/ads/: forms.py  humanize.py  models.py  owner.py  urls.py  utils.py  views.py
python/edu-django/ads/migrations/: 0001_initial.py  0002_ad_content_type_ad_picture.py  0003_comment_ad_comments_comment_ad_comment_owner.py  0004_fav_ad_favorites_fav_ad_fav_user_and_more.py  0005_ad_tags.py
python/edu-django/ads/templates/ads/: ad_form.html  (+2 more)
python/edu-django/autos/: models.py  urls.py  views.py
python/edu-django/autos/migrations/: 0001_initial.py
python/edu-django/cats/: models.py  urls.py  views.py
python/edu-django/cats/migrations/: 0001_initial.py  0002_alter_cat_weight.py
python/edu-django/favicon_io/: about.txt
python/edu-django/hello/: urls.py  views.py
python/edu-django/home/templates/: base_bootstrap.html
python/edu-django/mysite/: settings.py  urls.py
python/edu-django/polls/: urls.py  views.py
python/edu-django/scripts/: ads_init.py  cats_load.py  many_load.py
python/edu-django/ships/: urls.py  views.py
python/edu-django/unesco/: models.py
python/edu-django/utils/: utils.py
(+2297 files in other folders)
