###############################################################################
#
#   Python and tools configuration file. Main for the project.
#
#   Created:  Dmitrii Gusev, 21.07.2022
#   Modified:
#
###############################################################################

# -- mypy library config
[mypy]
ignore_missing_imports = True

# -- flake8 library config
[flake8]
# - list of ignored issues (E501 - too long line)
#ignore = E501
# - max cognitive complexity for statements
max-complexity = 10
# - adjustment to align with line length for black (it uses 88 chars by default)
# - we use the value = 110 as a default for the project
max-line-length = 110

# -- application / library metadata
[metadata]
name = django-sample-site
version = 1.0
description = Simple Django Sample Web Site
author = Dmitrii Gusev
long_description = file: README.md, CHANGES.md, LICENCE
long_description_content_type = text/markdown
keywords = web, django, page, site
license = MIT
classifiers =
    Programming Language :: Python :: 3.9
